fix overlapping warning

--- a/views/css/admin.css
+++ b/views/css/admin.css
@@ -80,7 +80,6 @@ p.payplugInterpanel {
   background: rgba(247, 160, 0, 0.15);
   border-color: #f7a000;
   color: rgba(196, 127, 0, 0.8);
-  width: max-content;
   margin-bottom: 10px;
 }
 .payplugAlert.-warning:before {
