--- a/views/css/less/component/payplug/admin/alert.less
+++ b/views/css/less/component/payplug/admin/alert.less
@@ -27,7 +27,6 @@
     background: fade(#colorMap[warning], 15%);
     border-color: #colorMap[warning];
     color: fade(darken(#colorMap[warning], 10%), 80%);
-    width: max-content;
     margin-bottom: 10px;
 
     &:before {
